2000-09-08  Kazu Hirata  <kazu@hxi.com>

	* archive.c: Fix formatting.
	* coff-arm.c: Likewise.
	* doc/chew.c: Likewise.

2000-09-08  Alan Modra  <alan@linuxcare.com.au>

	* section.c (bfd_get_unique_section_name): Put a dot before the
	numeric suffix.

2000-09-07  Kazu Hirata  <kazu@hxi.com>

	* doc/chew.c: Remove all uses of DEFUN and DEFUN_VOID.
	* elf.c: Fix formatting.

2000-09-07  Alexandre Oliva  <aoliva@redhat.com>

	* config.bfd (sh-*-linux*): Added.
	* configure.in (bfd_elf32_shlin_vec, bfd_elf32_shblin_vec): New.
	* targets.c: Declare them.
	* elf32-sh-lin.c: New file.
	* Makefile.am: Compile it.
	* elf32-sh.c: Don't override defines from elf32-sh-lin.c.
	* configure, Makefile.in: Rebuilt.

2000-09-06  Geoffrey Keating  <geoffk@cygnus.com>

	* xcofflink.c (xcoff_link_input_bfd): Include the .tocbss
	pseduo-section when determining where the TOC ends.

	* coff-rs6000.c (_bfd_xcoff_swap_aux_out): Use bfd_h_put_16 to
	output x_tvndx as it is only two bytes wide.

	* coff-rs6000.c (xcoff_howto_table): A modifiable branch-absolute
	reloc is 26 or 32 bits wide.

	* coff-rs6000.c (_bfd_xcoff_rtype2howto): The bitsize is irrelevant
	for relocs that don't change anything.  Also look at the full
	6 bits of bitsize.

2000-09-06  Philip Blundell  <philb@gnu.org>

	* config.bfd (arm*-*-uclinux*): New target.

2000-09-06  Alexandre Oliva  <aoliva@redhat.com>

	* configure: Rebuilt with new libtool.m4.

2000-09-06  Alan Modra  <alan@linuxcare.com.au>

	* section.c (bfd_get_unique_section_name): Avoid c++ reserved
	word for variable name.
	* bfd-in2.h: Regenerate.

2000-09-05  Nick Clifton  <nickc@redhat.com>

	* config.in: Regenerate.
	* libbfd.h: Regenerate.
	* po/bfd.pot: Regenerate.
	* doc/bfdint.texi: Remove CVS date string - it foils compares with
	local versions.

2000-09-05  Steven Johnson  <sbjohnson@ozemail.com.au>

	* cpu-powerpc.c  (arch_info_struct): Added MPC860 Family entry.

2000-09-05  Alan Modra  <alan@linuxcare.com.au>
